@@ -1,3 +1,15 @@
+2020-05-09  David Kilzer  <ddkilzer@apple.com>
+
+        Attemp to fix internal iOS build
+
+        * Platform/spi/ios/UIKitSPI.h:
+        - Define @class UIHoverEvent using header if available, else
+          fall back to local class definition.
+        - Define methods separately from class definition.
+        * UIProcess/ios/WKMouseGestureRecognizer.mm:
+        (-[WKMouseGestureRecognizer setView:]):
+        - Use new method if it is available.
+
 2020-05-09  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r261389.
